[package]
name = "dwrote"
description = "Lightweight binding to DirectWrite."
repository = "https://github.com/servo/dwrote-rs"
license = "MPL-2.0"
version = "0.4.2"
authors = ["Vladimir Vukicevic <vladimir@pobox.com>"]

[lib]
name = "dwrote"

[dependencies]
libc = "0.2"
lazy_static = "1"
winapi = { version = "0.3", features = ["dwrite", "winnt", "unknwnbase", "libloaderapi", "winnls"] }
serde = "1.0"
serde_derive = "1.0"
